--- a/rafting-book.html
+++ b/rafting-book.html
@@ -35,7 +35,12 @@
         </form>
         <p class="book-p">Enter the start and end dates of your trip along with your party size. Dry Oar is happy to help any group, any time, any size. We even accomidate negative size groups, where members of our own team will go instead of you. If you click submit, nothing will really happen, but take comfort in the fact that if you're on this website filling out this form you weren't really trying to book our services.</p>
         </div>
-
+        <div class ="lower-stuff">
+          <img class="river-img" src="images/rivers.jpg" alt="river in forest">
+          <p class="l1"> "Booking with Dry Oar was a breeze! Nothing happened when I made my reservation, but that was expected. My fictional family and I loved it! I am totally a real person." -Lucy Phillips </p>
+          <img class="camping-img" src="images/camping.jpg" alt="tent in mountains">
+          <p class="l2"> "Wow! I've never seen a better website! Whoever designed this page should get lots of money and stuff! He (or she, I guess in this circumstance I wouldn't know who made it) deserves an A+++!" -Eric Davidson </p>
+        </div>
         </main>
     <footer>
         <p>Dry Oar &copy; 2022 - Ethan Hodges</p>
