--- a/ethanhodges/index.html
+++ b/ethanhodges/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <div id="content">
+      
+    <a id="logo_link" href="ethanhodges/index.html">
+    <img class="logo" src="images/ethanlogo.png" alt="Ethan's Logo">
+    
     <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/ethanlogo.png" alt="Ethan's Logo">
+
         </a>
         <nav>
             <a href="index.html">Home</a>
