--- a/ethanhodges/index.html
+++ b/ethanhodges/index.html
@@ -23,13 +23,25 @@
             <input type="search" value="Search">
         </nav>
     </header>
-    <main>
-        <p>
-            One of the most important things for an author is to be known and to have a spot to be reached. It is almost vital in this day and age to include a location to learn more at the end of a book. Many authors use different social media accounts to connect with fans. However, many authors have fostered thriving communities on one platform or another only to have that site shut down. I have read multiple books that include dead links in the author bio. The best practice in this instance is to create an official author website rather than rely on social media trends. It is still important to maintain a presence on social media, but a constant location on the internet helps fans and professionals find you. One of the main issues as an author is having fans of one specific series that refuse to go over to other series. A good example of this is Brandon Mull, a YA/Children’s author. His Fablehaven series was widely popular, but his subsequent work, while better in my opinion, is comparatively unknown. Harry Potter is another example of this. J.K Rowling has tried to publish different books with no success at all. Having a website as a place for fans to go to learn more about other books and series can help to mitigate this. A link that fans can send friends and family to learn more about a book or author also helps. Depending on fan response to different books, activities can be created to keep them engaged. A great example of this can also come from Harry Potter, so many people want to take the Hogwarts house test. Having an official source for that would garner lots of attention and virtual foot traffic. Brandon Sanderson, essentially the name in modern adult Sci-Fi/Fantasy, has an excellent website containing everything mentioned. FAQ pages, tests and activities, art, news and updates, giveaways. His frequent updates and connection to his fans has allowed him to create a community that he is a part of. This is very important for a long-term career. Look at J.K Rowling, the Harry Potter fanbase is completely separate from her to the point that she wasn’t even invited to the reunion livestream earlier this year. All the Harry Potter nerds have alienated the author completely. Brandon Sanderson, in contrast, is constantly posting videos, recording podcasts and interacting with his fans, even during the height of COVID. This results in him being integral to the fanbase, who receive news about new books that they buy and read. Unlike Brandon Sanderson, I have not published any books. I don’t really have anything to post about just yet. I am working on it though, and the practice creating a website will help me in my potential career as an author as well as in my concrete goals of a career as a software engineer. 
-          </p>
-          <p>Images for the Home page</p>
-            <img class="ref-img" src="images/ethan.PNG" alt="Picture of Ethan">
-            <img class="ref-img" src="images/typewriter.jpg" alt="Typewriter">
+    <main id="home_main">
+        <div id="section_1">
+            <h1 id="home_title">Ethan Hodges: Author Guy</h1>
+            <p id="home_p_1">One of the most important things for an author is to be known and to have a spot to be reached. It is almost vital in this day and age to include a location to learn more at the end of a book. Many authors use different social media accounts to connect with fans. However, many authors have fostered thriving communities on one platform or another only to have that site shut down. I have read multiple books that include dead links in the author bio. The best practice in this instance is to create an official author website rather than rely on social media trends. It is still important to maintain a presence on social media, but a constant location on the internet helps fans and professionals find you. One of the main issues as an author is having fans of one specific series that refuse to go over to other series. A good example of this is Brandon Mull, a YA/Children’s author. His Fablehaven series was widely popular, but his subsequent work, while better in my opinion, is comparatively unknown. Harry Potter is another example of this. J.K Rowling has tried to publish different books with no success at all. Having a website as a place for fans to go to learn more about other books and series can help to mitigate this. A link that fans can send friends and family to learn more about a book or author also helps. </p>
+
+        </div> 
+        <div id="home_p_2">
+            <h3>Activities</h3>
+            <p> Depending on fan response to different books, activities can be created to keep them engaged. A great example of this can also come from Harry Potter, so many people want to take the Hogwarts house test. Having an official source for that would garner lots of attention and virtual foot traffic.</p> 
+            <h3>Examples</h3>
+            <p>Brandon Sanderson, essentially the name in modern adult Sci-Fi/Fantasy, has an excellent website containing everything mentioned. FAQ pages, tests and activities, art, news and updates, giveaways. His frequent updates and connection to his fans has allowed him to create a community that he is a part of.</p> 
+            <h3>Importance</h3>
+            <p>This is very important for a long-term career. Look at J.K Rowling, the Harry Potter fanbase is completely separate from her to the point that she wasn’t even invited to the reunion livestream earlier this year. All the Harry Potter nerds have alienated the author completely. Brandon Sanderson, in contrast, is constantly posting videos, recording podcasts and interacting with his fans, even during the height of COVID. This results in him being integral to the fanbase, who receive news about new books that they buy and read.</p> 
+            <h3>Conclusion</h3>
+            <p>Unlike Brandon Sanderson, I have not published any books. I don’t really have anything to post about just yet. I am working on it though, and the practice creating a website will help me in my potential career as an author as well as in my concrete goals of a career as a software engineer. </p>
+        
+        </div>          
+        <img id="home_img_1" src="images/ethan.PNG" alt="Picture of Ethan">
+        <img id="home_img_2" src="images/typewriter.jpg" alt="Typewriter">
     </main>
     <footer>
         <p>Ethan Hodges &copy; 2022 - Ethan Hodges</p>
