--- a/ethanhodges/nufaq.html
+++ b/ethanhodges/nufaq.html
@@ -9,25 +9,27 @@
 </head>
 <body>
     <div id="content">
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/ethanlogo.png" alt="Ethan's Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="nufaq.html">News Updates FAQ</a>
-            <input type="search" value="Search">
-        </nav>
-    </header>
+      
+        <a id="logo_link" href="ethanhodges/index.html">
+        <img class="logo" src="images/ethanlogo.png" alt="Ethan's Logo">
+        <header>
+    
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="nufaq.html">News Updates FAQ</a>
+                <input type="search" value="Search">
+            </nav>
+        </header>
     <main>
         <h3>News, Updates, FAQ</h3>
       <p>
         Many authors use their website to post updates on their current work, as well as free short stories and other news. Fanbases grow stronger when they have a concrete location to get news and updates, it mitigates rumors. Authors are asked large quantities of questions, how they write, what books they like, questions about the plot of their books. It can become tedious to answer these questions again and again. A FAQ (frequently asked questions) page allows an author to write out a comprehensive answer to their most common questions. Whenever those questions are asked, authors can just refer people to the website for a full answer. Authors can use their websites to write and publish reviews and opinions on things, current topics and issues in the literary community. Like the FAQ section, these essays can be referenced when the authors are asked for their opinions on complex issues. 
       </p>
       <p>Images for the Page 3</p>
-        <img class="ref-img" src="images/dark-bookcase-near.jpg" alt="Dark Bookcase">
-        <img class="ref-img" src="images/dark-bookcase-far.jpg" alt="Dark Bookcase">
+        <img id="nufaq_img_1" src="images/dark-bookcase-near.jpg" alt="Dark Bookcase">
+        <img id="nufaq_img_2" src="images/dark-bookcase-far.jpg" alt="Dark Bookcase">
 
     </main>
     <footer>
