--- a/ethanhodges/about.html
+++ b/ethanhodges/about.html
@@ -23,18 +23,18 @@
             </nav>
         </header>
     <main id = "about_main">
-        <div id="bibliography">
+        <div id="bibliography" class="section">
             <h3 class = "center"> Bibliography</h3>
             <p>I haven't really written anything published, but I have written some short stories and am working on some longer novels. If I had published stuff, I would put it here, maybe in a way that it could be a link to another page where you could access the story or something like that. I could put a story I submitted for a thing, but that seems like a lot of work. If you see my story anywhere on this website, then you know that I decided to do that. If you can't see it just pretend like it was the greatest thing you've ever seen in your life. Pretend it made you cry and changed the direction of your life for the better. If it is on here, you can still pretend that it's great.</p>
 
         </div>
 
-        <div id="about">
+        <div id="about" class="section">
             <h3 class = "center"> About</h3>
             <p>As a new author still trying to break into the industry, a website can be perfect to connect one to editors, agents, and publishers. There really aren’t any resources like LinkedIn for authors looking to break in, they just need to keep querying for an agent to take their work to an editor. Having a professional website filled with information, already published works and awards can show the agent your writing style, past accomplishments and future plans. When I was a little kid I had an intense love of reading. My parents tried really hard to hide all of the flashlights in the house. I ended up needing to use toys with dim blinking lights. I remember using a Bionicles sword to read, I'm suprised that I don't need glasses now. When I was in second grade, my teacher gave up on me. I was super ADHD, the only thing that would shut me up was reading books. She would give me a huge pile every day and let me read in the corner. I just took a bunch of those reading comprehension tests every day. Now, my reading retention is through the roof but I can't do math to save my life. Since third grade I loved to create worlds and stories, but these never had any structure. In fifth grade, I wrote a tiny short story, my teacher loved it. I remember that it was about a ghost that kidnapped a kid, fun stuff. I copied the style of the Series of Unfortunate Events books. I read so many books, but slowed down after discovering video games. Once I got back from my mission I started to read again. Last year, I kept track, I finished over 50 books! I'm practicing writing every day now, it's hard, but rewarding.</p>
         </div>
 
-        <div id="awards">
+        <div id="awards" class="section">
             <h3 class = "center"> Awards</h3>
             <p>I also haven't won any awards, but I did submit a short story for the "Writers of the Future" competition last week. If I win (I won't), I'll put the award here, first prize for the quarter wins $1000- first place for the year pays $5000! That would be super cool, who knows? Maybe I'll win against all the people who have practiced and submitted for years. The competition has some ties to the church of Scientology, but not a ton, don't worry about it. I heard about it at Conic-Con in Salt Lake, Brandon Sanderson is a judge for it! If I win, Brandon Sanderson will have read and enjoyed my work! Isn't that cool? It would be so cool, but I probably need to practice more to win. </p>
         </div>
