--- a/ethanhodges/index.html
+++ b/ethanhodges/index.html
@@ -23,12 +23,12 @@
         </nav>
     </header>
     <main id="home_main">
-        <div id="section_1">
+        <div id="section_1" class="section">
             <h1 class="center">Ethan Hodges: Author Guy</h1>
             <p id="home_p_1">One of the most important things for an author is to be known and to have a spot to be reached. It is almost vital in this day and age to include a location to learn more at the end of a book. Many authors use different social media accounts to connect with fans. However, many authors have fostered thriving communities on one platform or another only to have that site shut down. I have read multiple books that include dead links in the author bio. The best practice in this instance is to create an official author website rather than rely on social media trends. It is still important to maintain a presence on social media, but a constant location on the internet helps fans and professionals find you. One of the main issues as an author is having fans of one specific series that refuse to go over to other series. A good example of this is Brandon Mull, a YA/Children’s author. His Fablehaven series was widely popular, but his subsequent work, while better in my opinion, is comparatively unknown. Harry Potter is another example of this. J.K Rowling has tried to publish different books with no success at all. Having a website as a place for fans to go to learn more about other books and series can help to mitigate this. A link that fans can send friends and family to learn more about a book or author also helps. </p>
 
         </div> 
-        <div id="home_p_2">
+        <div id="home_p_2" class="section">
             <h3>Activities</h3>
             <p> Depending on fan response to different books, activities can be created to keep them engaged. A great example of this can also come from Harry Potter, so many people want to take the Hogwarts house test. Having an official source for that would garner lots of attention and virtual foot traffic.</p> 
             <h3>Examples</h3>
